# OpenFx-runtime

./: Makefile  list.yml
cpp/: CMakeLists.txt  Dockerfile  config.yaml
cpp/src/: CMakeLists.txt  handler.cc  handler.h
csharp/: Dockerfile  fxServer.csproj
csharp/src/: handler.cs
go/: Dockerfile  Gopkg.toml  handler.go
go/src/: handler.go
java/: Dockerfile
java/src/: Handler.java
nodejs/: Dockerfile
nodejs/src/: handler.js
python2/: Dockerfile
python2/src/: handler.py
python3/: Dockerfile
python3/src/: Dockerfile  handler.py
ruby/: Dockerfile
ruby/src/: handler.rb
